# aula17_bootcamp

./: desafio.db  desafio.py  desafio_gabarito.py  desafio_query.py  hello.py  meubanco.db  pyproject.toml
