[tool.poetry]
name = "aula17-bootcamp"
version = "0.1.0"
description = ""
authors = ["sch-paulo <pschmitzjr@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
sqlalchemy = "^2.0.37"
psycopg2-binary = "^2.9.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
